--- a/AnotherGame.vcxproj.filters
+++ b/AnotherGame.vcxproj.filters
@@ -1,84 +1,81 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Файлы заголовков">
+    <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Файлы ресурсов">
+    <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AnotherGame.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="SameGame.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="framework.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MainFrm.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AnotherGameDoc.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="SameGameDoc.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AnotherGameView.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="SameGameView.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="CAnotherGameBoard.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="SameGameBoard.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AnotherGame.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="SameGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MainFrm.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AnotherGameDoc.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="SameGameDoc.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AnotherGameView.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="SameGameView.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="CAnotherGameBoard.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="SameGameBoard.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="AnotherGame.rc">
-      <Filter>Файлы ресурсов</Filter>
+    <ResourceCompile Include="SameGame.rc">
+      <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\AnotherGame.rc2">
-      <Filter>Файлы ресурсов</Filter>
+    <None Include="res\SameGame.rc2">
+      <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\AnotherGameDoc.ico">
-      <Filter>Файлы ресурсов</Filter>
+    <Image Include="res\SameGameDoc.ico">
+      <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="res\AnotherGame.ico">
-      <Filter>Файлы ресурсов</Filter>
+    <Image Include="res\SameGame.ico">
+      <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
