--- a/AnotherGame.vcxproj
+++ b/AnotherGame.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{84854364-C905-4153-8903-BA9408045C8F}</ProjectGuid>
     <Keyword>MFCProj</Keyword>
-    <RootNamespace>SameGame</RootNamespace>
+    <RootNamespace>AnotherGame</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -179,21 +179,21 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="SameGameBoard.h" />
+    <ClInclude Include="AnotherGameBoard.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SameGame.h" />
-    <ClInclude Include="SameGameDoc.h" />
-    <ClInclude Include="SameGameView.h" />
+    <ClInclude Include="AnotherGame.h" />
+    <ClInclude Include="AnotherGameDoc.h" />
+    <ClInclude Include="AnotherGameView.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SameGameBoard.cpp" />
+    <ClCompile Include="AnotherGameBoard.cpp" />
     <ClCompile Include="MainFrm.cpp" />
-    <ClCompile Include="SameGame.cpp" />
-    <ClCompile Include="SameGameDoc.cpp" />
-    <ClCompile Include="SameGameView.cpp" />
+    <ClCompile Include="AnotherGame.cpp" />
+    <ClCompile Include="AnotherGameDoc.cpp" />
+    <ClCompile Include="AnotherGameView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -202,14 +202,14 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="SameGame.rc" />
+    <ResourceCompile Include="AnotherGame.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\SameGame.rc2" />
+    <None Include="res\AnotherGame.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\SameGame.ico" />
-    <Image Include="res\SameGameDoc.ico" />
+    <Image Include="res\AnotherGame.ico" />
+    <Image Include="res\AnotherGameDoc.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
